--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.0",
+		"@types/better-sqlite3": "^7.6.13",
 		"@types/node": "^25.3.0",
 		"@types/react": "^19.2.14",
 		"@types/react-dom": "^19.2.3",
@@ -36,6 +37,7 @@
 	},
 	"packageManager": "pnpm@9.15.0",
 	"dependencies": {
+		"better-sqlite3": "^12.6.2",
 		"fastify": "^5.7.4",
 		"pino": "^10.3.1",
 		"react": "^19.2.4",
